# GB28181-Service

./: .clang-format  .gitignore  .gitmodules  .gitmodules-gitee  .gitmodules-github  CMakeLists.txt  GBK2UTF8-result-63762.md  Install.md  LICENSE.txt  README.md  SipClient.sln  SipDevice.sln  config.json  convert.py  libexosip2.pc  pre_build.sh  test.http
.github/workflows/: cmake-ubuntu.yml  msbuild-windows.yml
.workflow/: pipeline-20250509.yml
GB_Service/: ConfigManager.cpp  DTO.cpp  DTO.h  Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  EventHandler.cpp  EventHandler.h  EventHandlerManager.cpp  EventHandlerManager.h  GB28181_Service.cpp  GB_Service.vcxproj  GB_Service.vcxproj.filters  HttpDigest.cpp  HttpDigest.h  HttpServer.cpp  HttpServer.h  MD5.cpp  MD5.h  Main.cpp  RequestPool.cpp  RequestPool.h  SSRC_Config.h  SipRequest.cpp  SipRequest.h  SipServer.cpp  SipServer.h  StreamManager.cpp  StreamManager.h  Structs.h  XmlParser.cpp  ZlmServer.cpp  ZlmServer.h  pch.cpp  pch.h
SipClient/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  DbManager.cpp  DbManager.h  Device.cpp  Device.h  DistributeManager.cpp  DistributeManager.h  FileTime.cpp  FileTime.h  HttpClient.cpp  HttpClient.h  HttpServer.cpp  HttpServer.h  NetUtils.cpp  NetUtils.h  README.md  SipClient.vcxproj  SipClient.vcxproj.filters  Structs.h  Utils.cpp  Utils.h  WinApi.cpp  WinApi.h  main.cpp  pch.h
SipDevice/: SipDevice.cpp  SipDevice.h  SipDevice.vcxproj  SipDevice.vcxproj.filters  main.cpp  pch.h
SipService/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  DTO.cpp  DTO.h  DbManager.cpp  DbManager.h  Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  EventHandler.cpp  EventHandler.h  EventHandlerManager.cpp  EventHandlerManager.h  HttpClient.cpp  HttpClient.h  HttpDigest.cpp  HttpDigest.h  HttpServer.cpp  HttpServer.h  Main.cpp  NetUtils.h  PtzCmd.cpp  PtzCmd.h  RequestPool.cpp  RequestPool.h  SSRC_Config.cpp  SSRC_Config.h  SipEvent.cpp  SipEvent.h  SipRequest.cpp  SipRequest.h  SipServer.cpp  SipServer.h  SipService.cpp  SipService.vcxproj  SipService.vcxproj.filters  StreamManager.cpp  StreamManager.h  (+10 more)
Test/: Test.cpp  Test.vcxproj  Test.vcxproj.filters
base/: CMakeLists.txt  base.h  base.vcxproj  base.vcxproj.filters  base_config.h
base/file/: file_path.h  file_util_posix.cpp
base/framework/: message_loop.h  message_loop_proxy.h
base/memory/: lazy_instance.h  singleton.h
base/time/: time_win.cpp
base/util/: string_number_conversions.cpp  string_number_conversions.h  string_util.cpp  string_util.h
base/win32/: path_util.cpp  path_util.h  platform_string_util.cpp  platform_string_util.h
depends/ZLTookit/include/Util/: FileTime.cpp  FileTime.h
depends/boost-1.75/include/boost/system/detail/: system_category_message_win32.hpp
depends/boost-1.75/lib/: libboost_atomic-vc142-mt-gd-x64-1_75.lib  libboost_chrono-vc142-mt-gd-x64-1_75.lib  libboost_chrono-vc142-mt-s-x64-1_75.lib  libboost_chrono-vc142-mt-x64-1_75.lib  libboost_thread-vc142-mt-gd-x64-1_75.lib
depends/cpprestsdk/lib/: cpprest142_2_10.lib  cpprest142_2_10d.lib
depends/cpr/lib/cmake/CURL/: CURLConfigVersion.cmake  CURLTargets-release.cmake
depends/cpr/lib/pkgconfig/: zlib.pc
depends/crow/: crow_all.h
depends/curl/lib/cmake/CURL/: CURLConfig.cmake  CURLConfigVersion.cmake
depends/curl/lib/pkgconfig/: libcurl.pc
depends/fmt/lib/: fmt.lib  fmtd.lib
depends/glog/include/glog/: export.h  logging.h  vlog_is_on.h
depends/glog/lib/: glog.lib  glogd.lib
depends/glog/lib/cmake/glog/: glog-config-version.cmake  glog-targets-debug.cmake  glog-targets-release.cmake  glog-targets.cmake
depends/openssl/include/openssl/: opensslconf.h
depends/pugixml/: pugiconfig.hpp  pugixmld.lib
depends/sip/include/osipparser2/headers/: osip_to.h
depends/sip/lib/debug/: eXosip.lib  libcares.lib  osip2.lib  osipparser2.lib
depends/sip/lib/release/: eXosip.lib  libcares.lib  osip2.lib  osipparser2.lib
libexosip2-5.3.0/c-ares/: ares_config.h
libexosip2-5.3.0/exosip/platform/vsnet/: eXosip.vcxproj  libcares.vcxproj
libexosip2-5.3.0/osip/platform/vsnet/: osip2.vcxproj  osip2.vcxproj.filters  osipparser2.vcxproj
libexosip2-5.3.0/osip/src/test/res/: sip-malformed19  sip-malformed20  sip90  sip95  sip96  sip97
release/windows/Debug/: config.xml  server.xml
release/windows/Release/: config.xml  server.xml
submodule/: CMakeLists.txt
submodule/crow/: crow_all.h
win-depends/ZLTookit/include/Util/: FileTime.cpp
win-depends/boost-1.75/lib/: libboost_atomic-vc142-mt-x64-1_75.lib  libboost_date_time-vc142-mt-gd-x64-1_75.lib  libboost_date_time-vc142-mt-x64-1_75.lib  libboost_filesystem-vc142-mt-x64-1_75.lib  libboost_thread-vc142-mt-x64-1_75.lib
win-depends/cpr/lib/: cpr.lib
win-depends/cpr/lib/cmake/CURL/: CURLTargets-debug.cmake  CURLTargets.cmake
win-depends/cpr/lib/pkgconfig/: libcurl.pc
win-depends/curl/lib/: libcurl-d_imp.lib
win-depends/curl/lib/cmake/CURL/: CURLTargets-release.cmake
win-depends/openssl/debug/: libssl.lib
win-depends/openssl/release/: libssl.lib
win-depends/pugixml/: pugixml.lib
win-depends/sqlite/lib/: sqlite3.lib
x64/Debug/: config.xml  server.xml
x64/Release/: config.xml  server.xml
